<resources>
    <string name="app_name">Robofest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="day_one_desc_first"> выставка/соревнования jr.FLL </string>
    <string name="day_one_desc_second"> сборка роботов/тренировка: HR сортировщик (старшая), HR чертежник (старшая), HR шорт-трек (младшая) </string>
    <string name="day_one_desc_third"> тренировка FLL </string>
    <string name="day_one_desc_forth"> презентация проектов FLL </string>
    <string name="day_one_desc_fifth"> соревнования: HR сортировщик (старшая), HR чертежник (старшая), HR шорт-трек (младшая) </string>
    <string name="day_two_desc_first"> тренировка FLL </string>
    <string name="day_two_desc_second"> сборка роботов/тренировка: HR шорт-трек (старшая), HR чертежник (младшая), HR траектория-квест, HR сортировщик (Profi) </string>
    <string name="day_two_desc_third"> выставка проектов “Freestyle” </string>
    <string name="day_two_desc_forth"> соревнования: HR чертежник (младшая), HR шорт-трек (старшая), HR сортировщик (Profi), HR траектория-квест </string>
    <string name="day_two_desc_fifth"> соревнования FLL </string>
    <string name="day_one_time_zero">11.00–14.00  </string>
    <string name="day_one_time_first">11.00–14.00  </string>
    <string name="day_one_time_second">11.00–14.00 </string>
    <string name="day_one_time_third">11.00–16.00  </string>
    <string name="day_one_time_forth">14.00–16.00 </string>
    <string name="day_one_time_fifth">15.00–18.00  </string>
    <string name="day_two_time_first">10.00–14.00  </string>
    <string name="day_two_time_second">10.00–13.00 </string>
    <string name="day_two_time_third">11.00–15.00  </string>
    <string name="day_two_time_forth">14.00–17.00 </string>
    <string name="day_two_time_fifth">15.00–17.00  </string>
    <string name="fll_age">Школьники от 9 до 14 лет</string>
    <string name="jrfll_age">Школьники от 6 до 9 лет</string>
    <string name="hr_age"> Младшая гр.  – возраст участников 9-10 лет\nСтаршая гр.  – возраст участников 11-12 лет</string>
    <string name="robocarusel_age">Школьники 7-11 класса </string>
    <string name="fll_team">3-6 человек</string>
    <string name="jrfll_team">2-6 детей</string>
    <string name="hr_team">1-2 человека во главе с тренером</string>
    <string name="robocarusel_team">3-6 человек</string>
    <string name="fll_robot">Набор LEGO MINDSTORMS</string>
    <string name="jrfll_robot">Из элементов LEGO</string>
    <string name="hr_robot">Набор LEGO MINDSTORMS</string>
    <string name="robocarusel_robot">Набор LEGO® MINDSTORMS® / Набор на усмотрение участника </string>
    <string name="fll_langProg">LEGO MINDSTORMS+ EV3, RoboLab, или NXT-G</string>
    <string name="jrfll_langProg"></string>
    <string name="hr_langProg">LEGO MINDSTORMS+ EV3, RoboLab, или NXT-G</string>
    <string name="robocarusel_langProg">LEGO MINDSTORMS+ EV3, RoboLab, или NXT-G / на усмотрение участника</string>
    <string name="area_name_1">Выставочный павильон, открытая площадка No1</string>
    <string name="area_name_2">Выставочный павильон, открытая площадка No2</string>
    <string name="area_name_3">Выставочный павильон, открытая площадка No3</string>
    <string name="area_name_4">Выставочный павильон, амфитеатр</string>
    <string name="area_name_5">Лекторий. Выставочный павильон, конференц-зал</string>
    <string name="day1_btn1_first">11.00–11.15  </string>
    <string name="day1_btn1_second">11.15–12.00  </string>
    <string name="day1_btn1_third">12.15–13.00  </string>
    <string name="day1_btn1_forth">13.00–13.40  </string>
    <string name="day1_btn1_fifth">14.00–14.40  </string>
    <string name="day1_btn1_sixth">15.00–15.40  </string>
    <string name="day1_btn1_seventh">16.00–16.40  </string>
    <string name="day1_btn2_first">11.00–11.15  </string>
    <string name="day1_btn2_second">11.15–12.00  </string>
    <string name="day1_btn2_third">12.15–13.00  </string>
    <string name="day1_btn2_forth">13.00–13.40  </string>
    <string name="day1_btn2_fifth">14.00–14.40  </string>
    <string name="day1_btn2_sixth">15.00–15.40  </string>
    <string name="day1_btn2_seventh">16.00–16.40  </string>
    <string name="day1_btn3_first">11.00–11.15  </string>
    <string name="day1_btn3_second">11.15–12.00  </string>
    <string name="day1_btn3_third">12.15–13.00  </string>
    <string name="day1_btn3_forth">13.00–13.40  </string>
    <string name="day1_btn3_fifth">14.00–14.40  </string>
    <string name="day1_btn3_sixth">15.00–15.40  </string>
    <string name="day1_btn3_seventh">16.00–16.40  </string>
    <string name="day1_btn4_first">11.00–11.15  </string>
    <string name="day1_btn4_second">11.15–12.00  </string>
    <string name="day1_btn4_third">12.15–13.00  </string>
    <string name="day1_btn4_forth">13.00–13.40  </string>
    <string name="day1_btn4_fifth">14.00–14.40  </string>
    <string name="day1_btn4_sixth">15.00–15.40  </string>
    <string name="day1_btn4_seventh">16.00–16.40  </string>
    <string name="day1_btn5_first">10.00–10.40  </string>
    <string name="day1_btn5_second">11.15–12.00  </string>
    <string name="day1_btn5_third">12.15–13.00  </string>
    <string name="day1_btn5_forth">13.00–13.40  </string>
    <string name="day1_btn5_fifth">14.00–14.40  </string>
    <string name="day1_btn5_sixth">15.00–15.40  </string>
    <string name="day1_btn5_seventh">16.00–16.40  </string>
    <string name="day2_btn1_first">10.00–10.40  </string>
    <string name="day2_btn1_second">11.00–11.40  </string>
    <string name="day2_btn1_third">12.00–12.40  </string>
    <string name="day2_btn1_forth">13.00–13.40  </string>
    <string name="day2_btn1_fifth">14.00–14.40  </string>
    <string name="day2_btn1_sixth">15.00–15.40  </string>
    <string name="day2_btn1_seventh">16.00–16.40  </string>
    <string name="day2_btn2_first">10.00–10.45  </string>
    <string name="day2_btn2_second">11.00–11.45  </string>
    <string name="day2_btn2_third">12.00–12.45  </string>
    <string name="day2_btn2_forth">13.00–13.45  </string>
    <string name="day2_btn2_fifth">14.00–14.45  </string>
    <string name="day2_btn2_sixth">15.00–15.45  </string>
    <string name="day2_btn3_first">10.00–10.45  </string>
    <string name="day2_btn3_second">11.00–11.45  </string>
    <string name="day2_btn3_third">12.00–12.45  </string>
    <string name="day2_btn3_forth">13.00–13.45  </string>
    <string name="day2_btn3_fifth">14.00–14.45  </string>
    <string name="day2_btn3_sixth">15.00–15.45  </string>
    <string name="day2_btn4_first">10.00–10.45  </string>
    <string name="day2_btn4_second">11.00–11.45  </string>
    <string name="day2_btn4_third">12.00–12.45  </string>
    <string name="day2_btn4_forth">13.00–13.45  </string>
    <string name="day2_btn4_fifth">14.00–14.45  </string>
    <string name="day2_btn4_sixth">15.00–15.45  </string>
    <string name="day2_btn5_first">10.00–10.40  </string>
    <string name="day2_btn5_second">11.00–11.40  </string>
    <string name="day2_btn5_third">12.00–12.40  </string>
    <string name="day2_btn5_forth">13.00–13.40  </string>
    <string name="day2_btn5_fifth">14.00–14.40  </string>
    <string name="day2_btn5_sixth">15.00–15.40  </string>
    <string name="day1_btn1_first_header">Открытие фестиваля </string>
    <string name="day1_btn1_second_header">Твой первый робот </string>
    <string name="day1_btn1_third_header">Конструирование и робототехника </string>
    <string name="day1_btn1_forth_header">Строительная площадка </string>
    <string name="day1_btn1_fifth_header">Начально-техническое моделирование и конструирование </string>
    <string name="day1_btn1_sixth_header">Строительная площадка </string>
    <string name="day1_btn1_seventh_header">Профнатализатор – инновационный инструмент оценки личностных и профессиональных компетенции </string>
    <string name="day1_btn2_first_header">Открытие фестиваля </string>
    <string name="day1_btn2_second_header">Арт - мастерские </string>
    <string name="day1_btn2_third_header">Арт - мастерские </string>
    <string name="day1_btn2_forth_header">«Не хочу быть роботом!» </string>
    <string name="day1_btn2_fifth_header">«Не хочу быть роботом!» </string>
    <string name="day1_btn2_sixth_header">Hello, Robot! - как это будет…по-французски\ испански… </string>
    <string name="day1_btn2_seventh_header">Hello, Robot! - как это будет…по-французски\ испански… </string>
    <string name="day1_btn3_first_header">Открытие фестиваля </string>
    <string name="day1_btn3_second_header">Hello, Robot! - как это будет по- испански… \ французски… </string>
    <string name="day1_btn3_third_header">Hello, Robot! - как это будет по- испански… \ французски… </string>
    <string name="day1_btn3_forth_header">Экономическая игра от Российско-Британской школы </string>
    <string name="day1_btn3_fifth_header">Экономическая игра от Российско-Британской школы </string>
    <string name="day1_btn3_sixth_header">Это вам не фокусы! </string>
    <string name="day1_btn3_seventh_header">Это вам не фокусы! </string>
    <string name="day1_btn4_first_header">Открытие фестиваля </string>
    <string name="day1_btn4_second_header">Приглашение к интеллектуальному путешествию! </string>
    <string name="day1_btn4_third_header">Современные тренды в образовании, или как правильно выбрать профессию </string>
    <string name="day1_btn4_forth_header">Современные тренды в образовании, или как правильно выбрать профессию </string>
    <string name="day1_btn4_fifth_header">Английский за пределами школы - где «взять» языковую среду в Омске? </string>
    <string name="day1_btn4_sixth_header">А что такое ШТО? </string>
    <string name="day1_btn4_seventh_header">Роботы для всех?… </string>
    <string name="day1_btn5_first_header">Тема: «Мама, я хочу быть айтишником, или Все начинается с роботов» </string>
    <string name="day1_btn5_second_header">Тема: «Практическое применение электронных учебников в школьной образовательной программе» </string>
    <string name="day1_btn5_third_header">Тема: «Зачем ребенку робототехника? Советы профессионалов» </string>
    <string name="day1_btn5_forth_header">Тема: «Почему нужно готовиться к ОГЭ/ЕГЭ, или… как стать Марком Цукербергом» </string>
    <string name="day1_btn5_fifth_header">Тема: «Промышленная робототехника» </string>
    <string name="day1_btn5_sixth_header">Тема: "Проекты и роботы на микроконтроллерах", "Современные беспилотные комплексы на базе мультикоптерных платформ» </string>
    <string name="day1_btn5_seventh_header">Дискуссионная площадка «IT сфера - сегодня, завтра» </string>
    <string name="day2_btn1_first_header">Начально-техническое моделирование и конструирование </string>
    <string name="day2_btn1_second_header">Строительная площадка </string>
    <string name="day2_btn1_third_header">Квадракоптеры </string>
    <string name="day2_btn1_forth_header">«Вертолетная феерия» </string>
    <string name="day2_btn1_fifth_header">Строительная площадка </string>
    <string name="day2_btn1_sixth_header">Роботы HUNA </string>
    <string name="day2_btn1_seventh_header">Физические эксперименты </string>
    <string name="day2_btn2_first_header">Hello, Robot! - как это будет…по-чешски </string>
    <string name="day2_btn2_second_header">«I pad вам в руки!» Или английский у вас в кармане </string>
    <string name="day2_btn2_third_header">Научная лаборатория </string>
    <string name="day2_btn2_forth_header">Научная лаборатория </string>
    <string name="day2_btn2_fifth_header">Это вам не фокусы! </string>
    <string name="day2_btn2_sixth_header">Это вам не фокусы! </string>
    <string name="day2_btn3_first_header">Hello, Robot! - как это будет по- китайски… </string>
    <string name="day2_btn3_second_header">Научная лаборатория </string>
</resources>