<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.velkonost.robofest.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Робофест в омске!"
                android:id="@+id/welcomeText"
                android:gravity="top"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:id="@+id/mapImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcomeText"
                android:layout_marginTop="10dp"
                android:background="@drawable/main_activity_map"
                android:paddingTop="40dp"
                android:paddingBottom="40dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:id="@+id/imageMap"
                    android:layout_height="wrap_content"
                    android:src="@drawable/robofestomsk_sheme"
                    android:fitsSystemWindows="true"
                    android:adjustViewBounds="true"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBtnDay"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/mapImage"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="День 1"
                    android:id="@+id/buttonDay1"
                    android:layout_gravity="bottom"
                    android:textColor="#FFF"
                    android:background="@drawable/main_activity_button_left"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="3dp"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="День 2"
                    android:id="@+id/buttonDay2"
                    android:layout_gravity="bottom"
                    android:textColor="#FFF"
                    android:background="@drawable/main_activity_button_right"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="3dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llBtnDay"
                android:id="@+id/rlDayDesc"
                android:layout_centerInParent="true"
                android:background="@drawable/main_activity_day_desc"
                android:padding="5dp"
                android:visibility="invisible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_one_time_zero"
                    android:padding="10dp"
                    android:id="@+id/textInvisibleStart"
                    android:visibility="invisible"/>

                    <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:id="@+id/one"
                      android:padding="10dp">

                        <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/day_one_time_first"
                          android:id="@+id/firstTime"/>

                        <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/day_one_desc_first"
                          android:layout_marginStart="5dp"
                          android:id="@+id/firstMeasure"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/two"
                        android:layout_below="@id/one"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/day_one_time_second"
                            android:id="@+id/secondTime"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/day_one_desc_second"
                            android:layout_marginStart="5dp"
                            android:id="@+id/secondMeasure"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/three"
                        android:layout_below="@id/two"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/day_one_time_third"
                            android:id="@+id/thirdTime"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/day_one_desc_third"
                            android:layout_marginStart="5dp"
                            android:id="@+id/thirdMeasure"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/four"
                        android:layout_below="@id/three"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/day_one_time_forth"
                            android:id="@+id/forthTime"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/day_one_desc_forth"
                            android:layout_marginStart="5dp"
                            android:id="@+id/forthMeasure"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/five"
                        android:layout_below="@id/four"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/day_one_time_fifth"
                            android:id="@+id/fifthTime"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/day_one_desc_fifth"
                            android:layout_marginStart="5dp"
                            android:id="@+id/fifthMeasure"/>
                    </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="#000"
                    android:layout_toEndOf="@id/textInvisibleStart"
                    android:layout_alignTop="@id/one"
                    android:layout_alignBottom="@id/five"
                    android:id="@+id/blackLine"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"/>

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
